# cs2-esp

./: BuildProject.bat  CMakeLists.txt  GenerateProject.bat
CMake/: PreserveFolderStructure.cmake
offsets/: offsets.hpp  offsets.json  update_offsets.py
src/: app.cpp  app.hpp  main.cpp  pch.h  window.cpp  window.hpp
src/classes/: auto_updater.cpp  auto_updater.hpp  config.hpp  globals.hpp  offsets.hpp  render.hpp  renderer.cpp  renderer.hpp  utils.cpp  utils.h  vector.hpp
src/hacks/: hack.cpp  hack.hpp  reader.cpp  reader.hpp
src/memory/: handle_hijack.hpp  memory.cpp  memory.hpp
src/utils/: log.cpp  log.h  tracer.h
